fixed some text positioning issues, fixed fonts that were not showing up correctly, and also fixed issue that was causing the call to placeholder to error out. everything is as it was before any updates! now i can move on and continue to work on this.

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -20,4 +20,9 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
     background-color: $bg-color;
+    font-family: 'Poppins', sans-serif;
+}
+
+a {
+    font-family: 'Poppins', sans-serif;
 }
